<resources>
    <string name="title_user_profile">Perfil de usuario</string>
    <string name="app_name">MuseoApp</string>
    <string name="login_mail">Correo electrónico…</string>
    <string name="login_password">Contraseña…</string>
    <string name="button_login">Iniciar sesión</string>
    <string name="button_signup">Registrarse</string>
    <string name="button_login_google">Google</string>
    <string name="button_login_apple">Apple</string>
    <string name="button_forgot_password">¿Has olvidado la contraseña?</string>
    <string name="others_login">Inicia sesión con…</string>
    <string name="editTextNameRegister">Nombre…</string>
    <string name="editTextSurnameRegister">Apellidos…</string>
    <string name="editTextTlfRegister">Número de teléfono…</string>
    <string name="title_activity_main_view">MainViewActivity</string>
    <string name="title_home">Museo App</string>
    <string name="title_dashboard">Usuario</string>
    <string name="title_notifications">Acerca del Museo</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="action_settings">Settings</string>
    <string name="burgue_menu_events">Eventos</string>
    <string name="btn_facebook">Facebook</string>
    <string name="btn_twitter">Twitter</string>
    <string name="btn_instagram">Instagram</string>
    <string name="btn_pinteres">Pinterest</string>
    <string name="map_view">Ubicación</string>
    <string name="label_name_museum">Museum App</string>
    <string name="label_email_museum">Email</string>
    <string name="label_tlf_museum">Teléfono</string>
    <string name="logo_description">Logo del Museo</string>
    <string name="log_out">Cerrar Sesión</string>
    <string name="update_profile">Actualizar Perfil</string>
    <string name="repeat_password">Repite la contraseña…</string>
    <string name="load_image_user">Cargar imagen</string>
    <string name="label_image_user">Imagen de perfil</string>

    <!-- Mensajes de Error -->
    <string name="error_email_user">El campo email es obligatorio.</string>
    <string name="error_password_user">El campo de password es obligatorio.</string>
    <string name="error_name_user">El campo nombre es obligatorio.</string>
    <string name="error_tlf_user">El campo Telefono es obligatorio.</string>
    <string name="error_surname_user">El campo Apellido es obligatorio.</string>
    <string name="error_password_different">Las passwords no coinciden.</string>
    <string name="error_permission_gallery">Debes aceptar los permisos de acceso al almacenamiento.</string>
    <string name="floating_button">QR Scanner</string>
    <string name="name">Nombre</string>
    <string name="email_museum">museum_app@gmail.com</string>
    <string name="tlf_museum">928-555-888</string>
    <string name="url_twitter">https://twitter.com/</string>
    <string name="url_facebook">https://es-es.facebook.com/</string>
    <string name="url_instagram">https://www.instagram.com/</string>
    <string name="url_pinterest">https://www.pinterest.es/</string>
    <string name="play">Reproducir</string>
    <string name="pause">Pausar</string>
    <string name="favourites">Lista de favoritos</string>
    <string name="error_get_user">No se pudo obtener datos del usuario</string>
    <string name="error_gallery">No se pudo cargar los favoritos.</string>
    <string name="add_favourite">Añadido a favoritos.</string>
    <string name="error_add_favourite">No se pudo añadir a favoritos.</string>
    <string name="remove_favourite">Ya no es favorito.</string>
    <string name="error_remove_favourite">No se pudo desmarcar de favoritos</string>
    <string name="add_gallery">Añadir una obra</string>
    <string name="take_photo">Sacar foto</string>
    <string name="open_gallery">Abrir galería</string>
    <string name="editTextTitleGallery">Título</string>
    <string name="editTextShortGallery">Descripción corta</string>
    <string name="editTextLongGallery">Descripción</string>
    <string name="error_title_gallery">El campo es obligatorio.</string>
    <string name="error_short_description">El campo es obligatorio.</string>
    <string name="error_long_description">El campo es obligatorio.</string>
    <string name="label_image_gallery">Imagen de la obra</string>
    <string name="prompt_qr">Debe enfocar a un QR</string>
    <string name="error_qr">No se pudo obtener el dato.</string>
    <string name="error_map">\"Para poder visualizar el mapa, debes aceptar los permisos.\"</string>
    <string name="error_permission_map">\"Ve a ajustes y acepta los permisos\",</string>
    <string name="send_email">Enviar</string>
    <string name="cancel_restore">Cancelar</string>
    <string name="label_restore_pass">Restaurar contraseña</string>
</resources>