<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/favourite_button"
        android:icon="@drawable/ic_baseline_star_border_24"
        android:title="@string/favourites"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/play_button"
        android:icon="@drawable/ic_baseline_play_arrow_24"
        android:title="@string/play"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/pause_button"
        android:icon="@drawable/ic_baseline_pause_24"
        android:title="@string/pause"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/close_button"
        android:icon="@drawable/ic_baseline_close_24"
        android:title="@string/close"
        app:showAsAction="ifRoom"/>
</menu>