<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/a"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.information.InformationFragment">


    <com.google.android.gms.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="342dp"
        android:layout_height="260dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:contentDescription="@string/map_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider"
        android:layout_width="409dp"
        android:layout_height="6dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="30dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mapView" />

    <TextView
        android:id="@+id/textLabelNameMuseum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="25dp"
        android:text="@string/label_name_museum"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <TextView
        android:id="@+id/textViewNameMuseum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="25dp"
        android:text="TextView"
        app:layout_constraintStart_toEndOf="@+id/textLabelNameMuseum"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <TextView
        android:id="@+id/textViewLabelEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="25dp"
        android:text="@string/label_email_museum"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textLabelNameMuseum" />

    <TextView
        android:id="@+id/textViewEmailMuseum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="25dp"
        android:text="TextView"
        app:layout_constraintStart_toEndOf="@+id/textLabelNameMuseum"
        app:layout_constraintTop_toBottomOf="@+id/textViewNameMuseum" />

    <TextView
        android:id="@+id/textViewLabelTlf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="25dp"
        android:text="@string/label_tlf_museum"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewLabelEmail" />

    <TextView
        android:id="@+id/textViewTlfMuseum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="25dp"
        android:text="TextView"
        app:layout_constraintStart_toEndOf="@+id/textLabelNameMuseum"
        app:layout_constraintTop_toBottomOf="@+id/textViewEmailMuseum" />

    <ImageButton
        android:id="@+id/imageButtonPinterest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="60dp"
        android:contentDescription="@string/btn_pinteres"
        android:minHeight="48dp"
        android:src="@drawable/ic_baseline_broken_image_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageButtonInstagram"
        app:layout_constraintTop_toBottomOf="@+id/textViewLabelTlf" />

    <ImageButton
        android:id="@+id/imageButtonTwitter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="35dp"
        android:contentDescription="@string/btn_twitter"
        android:minHeight="48dp"
        android:src="@drawable/ic_baseline_person_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewLabelTlf" />

    <ImageButton
        android:id="@+id/imageButtonFacebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="35dp"
        android:contentDescription="@string/btn_facebook"
        android:minHeight="48dp"
        android:src="@drawable/ic_baseline_qr_code_scanner_24"
        app:layout_constraintStart_toEndOf="@+id/imageButtonTwitter"
        app:layout_constraintTop_toBottomOf="@+id/textViewLabelTlf" />

    <ImageButton
        android:id="@+id/imageButtonInstagram"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="35dp"
        android:contentDescription="@string/btn_instagram"
        android:minHeight="48dp"
        android:src="@drawable/ic_baseline_info_24"
        app:layout_constraintStart_toEndOf="@+id/imageButtonFacebook"
        app:layout_constraintTop_toBottomOf="@+id/textViewLabelTlf" />


</androidx.constraintlayout.widget.ConstraintLayout>