<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.museoapp.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_user"
        android:name="com.example.museoapp.ui.user.UserFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_user_login" >
        <action
            android:id="@+id/nav_user_to_profile_user"
            app:destination="@id/userProfileFragment" />
        <action
            android:id="@+id/action_navigation_user_to_adminMainActivity"
            app:destination="@id/adminMainActivity" />
    </fragment>

    <fragment
        android:id="@+id/navigation_information"
        android:name="com.example.museoapp.ui.information.InformationFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_information" />

    <fragment
        android:id="@+id/museumEvent"
        android:name="com.example.museoapp.ui.Events.MuseumEvent"
        android:label="fragment_museum_event"
        tools:layout="@layout/fragment_museum_event" >
        <action
            android:id="@+id/action_museumEvent_pop"
            app:popUpTo="@id/museumEvent"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_museumEvent_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>
    <activity
        android:id="@+id/museumEventActivity"
        android:name="com.example.museoapp.ui.Events.MuseumEventActivity"
        android:label="activity_museum_event"
        tools:layout="@layout/activity_museum_event" />
    <fragment
        android:id="@+id/userProfileFragment"
        android:name="com.example.museoapp.ui.user.UserProfileFragment"
        android:label="@string/title_user_profile"
        tools:layout="@layout/fragment_user_profile">
        <action
            android:id="@+id/profile_user_to_login_user"
            app:destination="@id/navigation_user" />
        <action
            android:id="@+id/action_userProfileFragment_to_updateProfileFormActivity"
            app:destination="@id/updateProfileFormActivity" />
    </fragment>
    <activity
        android:id="@+id/updateProfileFormActivity"
        android:name="com.example.museoapp.ui.UpdateForm.UpdateProfileFormActivity"
        android:label="activity_update_profile_form"
        tools:layout="@layout/activity_update_profile_form" />
    <activity
        android:id="@+id/adminMainActivity"
        android:name="com.example.museoapp.ui.admin.AdminMainActivity"
        android:label="activity_admin_main"
        tools:layout="@layout/activity_admin_main" />


</navigation>